# YiziMarkdown

./: .gitignore  LICENSE  README.md  _temp_check.js  changelog.md  help.md  index.html  package-lock.json  package.json  tailwind.config.ts  test-inline-widget.html  test-katex-css.mjs  vite.config.ts  welcome.md
src/: App.tsx
src-tauri/: Cargo.toml  changelog.md  help.md  installer.nsh  keybindings.json  readme.md  tauri.conf.json  user.css  welcome.md
src-tauri/capabilities/: default.json
src-tauri/icons/: _tmp_svg_render.html
src-tauri/src/: main.rs
src-tauri/templates/: default.md
src-tauri/themes/: academic.css  facebook.css  liquidglass.css  magazine.css  matrix.css  minimal.css  nature.css  tech.css  theme.json  typewriter.css  vibrant.css  violet.css
src/assets/themes/: cyberpunk.css  liquidglass.css  lychee.css  magazine.css  minimal.css  mint.css  sunset.css  tech.css  vibrant.css
src/components/: Editor.tsx  Editor.tsx.cm.bak  HomePage.tsx  SettingsModal.tsx  Sidebar.tsx  SlashMenu.tsx  StatusBar.tsx  TabBar.tsx  Toolbar.tsx  WindowControls.tsx
src/components/theme/: ThemeSwitcher.tsx
src/lib/: cm-live-blocks.ts  cm-live-render.ts  cm-slash-menu.ts  headingId.ts  keybindings.ts  markdownRenderer.ts  tauri.ts
src/plugins/: registry.ts  types.ts
src/plugins/built-in/: katex.ts  mermaid.ts
src/stores/: editorStore.ts  settingsStore.ts
src/styles/: globals.css
src/types/: markdown-it-katex.d.ts  markdown-it-task-lists.d.ts  tauri.d.ts
