[package]
name = "yizimarkdown"
version = "0.1.7"
description = "YiziMarkdown - A sleek Markdown editor"
authors = ["You"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winreg = "0.52"
base64 = "0.22"
open = "5"
tauri-plugin-single-instance = "2"

[features]
# This feature is used for production builds where `devPath` points to the
# filesystem. By default, `devPath` points to the frontend dev server.
custom-protocol = ["tauri/custom-protocol"]
